2006-05-04 Paul Jakma <paul.jakma@sun.com>

	* (general) Fixes for bugs #261 and 262. Thanks to
	  Konstantin V. Gavrilenko <kos@arhont.com> for the problem
	  reports, testing of a series of proposed patches and comment
	  on the proposed changes in behaviour.
	* rip_interface.c: (ip_rip_authentication_mode_cmd) Parse all
	  of the command before making any changes to configured state.
	* ripd.c: (rip_read) RIP version control should be absolute and
          always apply, fixes bug #261 by allowing RIPv1 to be disabled.
	  Fix bug #262: If authentication is enabled, then
	  unauthenticated packets should not be accepted. We do however
	  make an exception for RIPv1 REQUEST packets, to which we will
	  reply as RIPv1 can now be disabled fully, to allow ripd to
	  still provide routing /information/ to simple devices.
	* ripd_interface.c: (general) 0.98 specific command changes for
	  authentication, to allow no-auth to be set, compatibly.
	  (no_ip_rip_authentication_mode) should set RIP_NO_AUTH
	  (rip_interface_config_write) Explicitely write out
	  the authentication mode, including RIP_NO_AUTH.

2005-05-31 Hasso Tepper <hasso at quagga.net>

	* rip_routemap.c: Fix set_metric_addsub_cmd help, it's no about BGP
	  metric.

2005-05-27 Hasso Tepper <hasso at quagga.net>

	* rip_routemap.c: In case of '0.0.0.0' used as 'nexthop', use sender
	  address as nexthop in routemap.

2005-05-27 Hasso Tepper <hasso at quagga.net>

	* rip_routemap.c: Make "match interface" routemap command match both -
	  in and out interfaces.

2005-05-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* rip_interface.c (rip_interface_add): Need to call
	  rip_passive_interface_apply (was already calling it in
	  rip_interface_up).

2005-03-05 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripd.c: (rip_create_socket) Save errno before calling
	  ripd_privs.change.

2005-01-04 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
